Fix side bar nav when overflowing

--- a/themes/area51/assets/scss/_sidebar-tree.scss
+++ b/themes/area51/assets/scss/_sidebar-tree.scss
@@ -8,7 +8,7 @@
 
     @include media-breakpoint-up(md) {
         @supports (position: sticky) {
-            max-height: calc(100vh - 10rem);
+            max-height: calc(93vh - 10rem);
             overflow-y: auto;
         }
     }
@@ -114,7 +114,7 @@
     }
 
 
-    padding-bottom: 1rem;
+    padding-bottom: 2rem;
 
     &__toggle {
         line-height: 1;
